--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,16 @@
-<p>recipe-item works!</p>
+<div class="row">
+	<div class="col-xs-12">
+		<a href="#" class="list-group-item clearfix" (click)="onShowDetail()">
+			<div class="pull-left">
+				<h4 class="list-group-item-heading">{{reciptItem.name}}</h4>
+				<p class="list-group-item-text" [innerText]="reciptItem.description"></p>
+			</div>
+			<span class="pull-right">
+				<img [src]="reciptItem.imagePath"
+					 alt="{{reciptItem.name}}"
+					 class="img-responsive"
+					 style="max-height: 80px;">
+			</span>
+		</a>
+	</div>
+</div>
