--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,11 @@
 <div class="row">
 	<div class="col-md-5">
-		<app-recipe-list></app-recipe-list>
+		<app-recipe-list (recipeWasSelected) = "setRecipeToShow($event)"></app-recipe-list>
 	</div>
 	<div class="col-md-7">
-		<app-recipe-detail></app-recipe-detail>
+		<app-recipe-detail *ngIf="recipeToShow; else messageToSelect" [recipeDetailToShow] = "recipeToShow"></app-recipe-detail>
+		<ng-template #messageToSelect>
+			<span style="color:red">Please select a recipe </span>
+		</ng-template>
 	</div>
 </div>
