--- a/src/app/shooping/shooping-list/shooping-list.component.html
+++ b/src/app/shooping/shooping-list/shooping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-xs-10">
-		<app-shooping-edit></app-shooping-edit>
+		<app-shooping-edit (addNewIngredient)="addNewIngredient($event)"></app-shooping-edit>
 		<hr>
 		<ul class="list-group">
 			<a 	class="list-group-item"
