--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,10 +3,6 @@
 		<app-recipe-list></app-recipe-list>
 	</div>
 	<div class="col-md-7">
-		<app-recipe-detail *ngIf="recipeToShow; else messageToSelect"
-		[recipeDetailToShow] = "recipeToShow"></app-recipe-detail>
-		<ng-template #messageToSelect>
-			<span style="color:red">Please select a recipe </span>
-		</ng-template>
+		<router-outlet></router-outlet>
 	</div>
 </div>
